fixed title not showing in every tiles

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -469,7 +469,6 @@ path {
 }
 
 .lineGraph-health-text {
-	margin-top: -90px;
   font-weight: bold;
   font-size: 35px;
 }
